[tool.poetry]
name = "sync-focus"
version = "0.1.0"
description = ""
authors = ["meow"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "1.0.0"
uvicorn = "0.23.1"
fastapi = "0.100.1"
sqlalchemy = "^2.0.23"
asyncpg = "0.28.0"
greenlet = "2.0.2"
python-multipart = "0.0.6"
bcrypt = "4.0.1"
passlib = "1.7.4"
python-jose = "3.3.0"
ruff = "^0.1.5"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
