[tool.poetry]
name = "sync-focus"
version = "0.1.0"
description = ""
authors = ["meow"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "1.0.0"
uvicorn = "0.23.1"
fastapi = "0.100.1"
sqlalchemy = "2.0.26"
asyncpg = "0.28.0"
greenlet = "3.0.3"
python-multipart = "0.0.6"
bcrypt = "4.0.1"
passlib = "1.7.4"
python-jose = "3.3.0"
ruff = "^0.1.5"
backoff = "2.2.1"
blinker = "1.7.0"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
cython = "3.0.8"
deprecated = "1.2.14"
flask = "2.3.3"
flask-sqlalchemy = "3.1.1"
googleapis-common-protos = "1.59.0"
grpcio = "1.60.1"
idna = "3.6"
importlib-metadata = "6.11.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
mako = "1.3.2"
markupsafe = "2.1.5"
opentelemetry-api = "^1.22"
opentelemetry-distro = "*"
opentelemetry-exporter-otlp = "*"
opentelemetry-exporter-otlp-proto-common = "*"
opentelemetry-exporter-otlp-proto-grpc = "*"
opentelemetry-exporter-otlp-proto-http = "*"
opentelemetry-instrumentation = "*"
opentelemetry-instrumentation-aws-lambda = "*"
opentelemetry-instrumentation-dbapi = "*"
opentelemetry-instrumentation-flask = "*"
opentelemetry-instrumentation-jinja2 = "*"
opentelemetry-instrumentation-logging = "*"
opentelemetry-instrumentation-sqlite3 = "*"
opentelemetry-instrumentation-urllib = "*"
opentelemetry-instrumentation-wsgi = "*"
opentelemetry-proto = "*"
opentelemetry-sdk = "*"
opentelemetry-semantic-conventions = "*"
opentelemetry-util-http = "*"
packaging = "23.2"
protobuf = "4.25.2"
requests = "2.31.0"
typing-extensions = "4.9.0"
urllib3 = "2.2.0"
werkzeug = "2.3.8"
wrapt = "1.16.0"
zipp = "3.17.0"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
opentelemetry-instrumentation-fastapi = "^0.44b0"
opentelemetry-exporter-jaeger = "^1.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
