[package]
name = "etl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tikv-jemallocator = "0.5"
thiserror = "1.0.44"
chrono="0.4.26"
# tracing adopter
tracing-opentelemetry = "0.22.0"
tracing-subscriber =  "0.3.17"
# a lot of opentelemetry dependencies
opentelemetry = { version = "0.21.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio", "metrics"] }
opentelemetry-stdout = { version = "0.2.0", features = ["metrics"] }
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry-otlp = { version = "0.14.0", features = ["metrics"] }
uuid = "1.8.0"
lapin ="2.3.1"
serde = {version= "1.0.197",features = ["derive"]}
serde_json = "1.0.115"
futures = "0.3.30"

[dependencies.tracing]
version = "0.1.40"
features = ["async-await", "log", "release_max_level_debug"]

[dependencies.tokio]
workspace = "1.34.0"
features = ["macros", "rt-multi-thread", "full", "time"]

[dependencies.tokio-stream]
version = "0.1.14"
features = ["sync"]

[dependencies.sea-orm]
version = "0.12.11"
features = [
  "runtime-tokio-rustls",
  "macros",
  "mock",
  "sqlx-postgres",
  "with-chrono"
]

